Import of PLICEASE/PlugAuth-Plugin-LDAP-0.03 from CPAN.
gitpan-cpan-distribution: PlugAuth-Plugin-LDAP
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PLICEASE/PlugAuth-Plugin-LDAP-0.03.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,11 +1,13 @@
 
 
 This archive contains the distribution PlugAuth-Plugin-LDAP,
-version 0.02:
+version 0.03:
 
   LDAP back end for PlugAuth
 
-This software is copyright (c) 2012 by NASA GSFC.  No
-license is granted to other entities.
+This software is copyright (c) 2012 by NASA GSFC.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
 
