--- a/README
+++ b/README
@@ -1,13 +1,38 @@
+NAME
+    PlugAuth::Plugin::LDAP - LDAP back end for PlugAuth
 
+VERSION
+    version 0.05
 
-This archive contains the distribution PlugAuth-Plugin-LDAP,
-version 0.04:
+SYNOPSIS
+    In your PlugAuth.conf file:
 
-  LDAP back end for PlugAuth
+     ---
+     ldap :
+       server : ldap://198.118.255.141:389
+       dn : uid=%s, ou=people, dc=users, dc=example, dc=com
+       authoritative : 1
 
-This software is copyright (c) 2012 by NASA GSFC.
+    Note that %s in the dn will be replaced with the username when binding
+    to the LDAP server.
 
-This is free software; you can redistribute it and/or modify it under
-the same terms as the Perl 5 programming language system itself.
+DESCRIPTION
+    Handle authentication only from LDAP server. Everything else is handled
+    by PlugAuth::Plugin::FlatAuth (e.g. authorization, groups, etc).
 
+METHODS
+  PlugAuth::Plugin::LDAP->check_credentials( $user, $password )
+    Given a user and password, check to see if the password is correct.
+
+SEE ALSO
+    PlugAuth, PlugAuth::Routes, PlugAuth::Plugin::FlatAuth
+
+AUTHOR
+    Graham Ollis <gollis@sesda3.com>
+
+COPYRIGHT AND LICENSE
+    This software is copyright (c) 2012 by NASA GSFC.
+
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
 
